<resources>
    <string name="app_name">MyImpressions</string>
    <string name="action_settings">Settings</string>
    <string name="my_establishments">My Establishments</string>
    <string name="my_categories">My Categories</string>
    <string name="new_establishment">New Establishment</string>
    <string name="delete_establishment">Delete Establishment</string>
    <string name="update_establishment">Update Establishment</string>
    <string name="to_do">To do</string>
    <string name="name">Name</string>
    <string name="name_example">ex: John\'s BBQ</string>
    <string name="category">Category</string>
    <string name="address">Address</string>
    <string name="address_example">ex:  104, Groove Street, Center</string>
    <string name="create_establishment">Create Establishment</string>
    <string name="name_empty">Name can\'t be empty!</string>
    <string name="category_empty">Category can\'t be empty!</string>
    <string name="address_empty">Address can\'t be empty!</string>
    <string name="restaurant">Restaurant</string>
    <string name="market">Market</string>
    <string name="event_space">Event Space</string>
    <string name="store">Store</string>
    <string name="pub">Pub</string>
    <string name="park">Park</string>
    <string name="square">Square</string>
    <string name="other">Other</string>
    <string name="language">Language</string>
    <string name="info">Info</string>
    <string name="choose_lang">Choose a language:</string>
    <string name="cancel">Cancel</string>
    <string name="choose_color">Choose a color:</string>
    <string name="bg_color">Background Color...</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="no_color">No color</string>
    <string name="createdBy">Created by: Caio Thizio</string>
    <string name="version">version 1.0.0</string>
    <string name="university">Federal University of Technology - Paraná</string>
    <string name="description">Description</string>
    <string name="aviso">Alert</string>
    <string name="ok">OK</string>
    <string name="confirmacao">Confirmation</string>
    <string name="sim">Yes</string>
    <string name="nao">No</string>
    <string name="deseja_realmente_apagar">Really want to delete?</string>
    <string name="new_category">New category</string>
    <string name="update_category">Update category</string>
    <string name="delete_category">Delete category</string>
    <string name="category_name">Category Name:</string>
    <string name="category_example">ex: Hockey Club</string>
    <string name="save_category">Save Category</string>
</resources>
