<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.edu.utfpr.caiot.myimpressions.PrincipalActivity">
    <item
        android:id="@+id/action_my_establishments"
        android:icon="@mipmap/ic_launcher_foreground_establishment"
        android:orderInCategory="100"
        android:title="@string/my_establishments"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_my_categories"
        android:icon="@mipmap/ic_launcher_foreground_categories"
        android:orderInCategory="101"
        android:title="@string/my_categories"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:icon="@mipmap/ic_launcher_foreground_settings"
        android:orderInCategory="102"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" >
        <menu >
            <item
                android:id="@+id/action_color"
                android:title="@string/bg_color"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_info"
                android:title="@string/info"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>
